--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
+    "react-barcode": "^1.4.6",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
